# MinimalSFML

./: .gitignore  Button.cpp  CMakeLists.txt  LICENSE  Label.cpp  MinimalSFML.cpp  MinimalSFML.h  README.md  main.cpp
tinyfiledialogs/: tinyfiledialogs.c  tinyfiledialogs.h
